<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorAccent">
    <Button
        android:id="@+id/removeAll"
        android:text="@string/removeAll"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"/>
    <Button
        android:id="@+id/sort_byRuntime"
        android:text="@string/sortByRuntime"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/removeAll"/>
    <Button
        android:id="@+id/sort_byYear"
        android:text="@string/sortByYear"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/removeAll"/>
    <Button
        android:id="@+id/sort_byRating"
        android:text="@string/sortByRating"
        android:layout_toRightOf="@id/sort_byYear"
        android:layout_below="@id/sort_byRuntime"
        android:layout_width="200dp"
        android:layout_height="wrap_content" />

</RelativeLayout>