<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_statistics"
        android:orderInCategory="100"
        app:showAsAction="always"
        android:icon="@drawable/ic_statistics"
        android:title="Save"/>


    <item
        android:id="@+id/cbcitem1"
        android:icon="@drawable/food2"
        android:orderInCategory="500"
        android:title="@string/menuItem1"
        app:showAsAction="always" />

    <item
        android:id="@+id/cbcitem2"

        android:icon="@drawable/film1"

        android:orderInCategory="200"

        android:title="@string/menuItem2"
        app:showAsAction="always" />
    <item
        android:id="@+id/cbcitem3"
        android:icon="@drawable/bus_icon"
        android:orderInCategory="300"
        android:title="@string/menuItem3"
        app:showAsAction="always" />


    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/ic_help_black_24dp"
        android:title="About"/>






</menu>