<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Nutrition">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ListView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/FoodSearchText"
            android:layout_below="@id/goHomeButton">

        </ListView>

        <ProgressBar
            android:id="@+id/FoodProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true" />

        <Button
            android:id="@+id/nutritionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/NutritionButton" />
        <Button
            android:id="@+id/goHomeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ExitButton"
            android:layout_toRightOf="@id/nutritionButton"
            />


        <EditText
            android:id="@+id/FoodSearchText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:hint="@string/Hint"
            android:inputType="textShortMessage" />

    </RelativeLayout>

</LinearLayout>